det all data
