# features/all_data/model.go
@@ -1,0 +1,21 @@
+// // Package SocialMedia provides structures and functions related to social media details.
+package AllData
+
+// type KData struct {
+// 	SocialMedia  []interface{} `json:"social_media"`
+// 	ProjectsList []interface{} `json:"projects_list"`
+// 	HomeDetails  []interface{} `json:"home_detials"`
+// 	Services     []interface{} `json:"services"`
+// }
+
+// // ,Data{
+// // 	SocialMedia:  socialMediaDetails,
+// // 	HomeDetails:  homeDetails,
+// // 	ProjectsList: projects,
+// // 	Services:     services,
+// // }
+// // Status       string                     `json:"status"`
+// // SocialMedia  []social_media.SocialMedia `json:"social_media"`
+// // ProjectsList []projects.Project         `json:"projects_list"`
+// // HomeDetails  []home_details.HomeDetails `json:"home_detials"`
+// // Services     []services.Service         `json:"services"`
